--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 Flask==3.0.0
-Flask-CORS==4.0.0
-requests==2.31.0
+Flask-Cors==4.0.0
+requests==2.32.5
 urllib3==2.1.0
-python-dotenv==1.0.0
-openai==1.54.0
-httpx==0.27.0
-gunicorn==21.2.0
+python-dotenv==1.2.1
+openai==2.8.0
+httpx==0.28.1
 instructor==1.13.0
-pydantic==2.10.3
+pydantic==2.12.4
