Replace HuggingFaceAiService with GroqAiService for sport recommendations

--- a/tibg-sport-backend/appsettings.Development.json
+++ b/tibg-sport-backend/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "HuggingFace": {
-    "ModelName": "Qwen/Qwen2.5-7B-Instruct"
+  "Groq": {
+    "ModelName": "llama-3.3-70b-versatile"
   }
 }
