--- a/tibg-sport-backend/appsettings.json
+++ b/tibg-sport-backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Groq": {
+    "ModelName": "llama-3.3-70b-versatile"
+  }
 }
