Implement feedback system with UserFeedback model, FeedbackService, and FeedbackController

--- a/tibg-sport-backend/appsettings.Development.json
+++ b/tibg-sport-backend/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=ep-calm-thunder-a9eblyxg-pooler.gwc.azure.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_b7dUSBf3XcmL;SSL Mode=VerifyFull;Channel Binding=Require"
+  },
   "Groq": {
     "ModelName": "llama-3.3-70b-versatile"
   }
