--- a/TIBG.Core/TIBG.API.Core.csproj
+++ b/TIBG.Core/TIBG.API.Core.csproj
@@ -15,11 +15,15 @@
   <ItemGroup>
     <ProjectReference Include="..\TIBG.Models\TIBG.Core.Models.csproj" />
     <ProjectReference Include="..\TIBG.Contracts\TIBG.Contracts.csproj" />
+	  <ProjectReference Include="..\TIBG.Entities\TIBG.ENTITIES.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.11" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.11" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
 
 </Project>
