Fix project references in Dockerfile and TIBG.API.Core.csproj for TIBG.ENTITIES

--- a/TIBG.Core/TIBG.API.Core.csproj
+++ b/TIBG.Core/TIBG.API.Core.csproj
@@ -15,7 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TIBG.Models\TIBG.Core.Models.csproj" />
     <ProjectReference Include="..\TIBG.Contracts\TIBG.Contracts.csproj" />
-	  <ProjectReference Include="..\TIBG.Entities\TIBG.ENTITIES.csproj" />
+	  <ProjectReference Include="..\TIBG.ENTITIES\TIBG.ENTITIES.csproj" />
   </ItemGroup>
 
   <ItemGroup>
