--- a/tibg-sport-backend/appsettings.json
+++ b/tibg-sport-backend/appsettings.json
@@ -7,9 +7,18 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": "Host=ep-calm-thunder-a9eblyxg-pooler.gwc.azure.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_b7dUSBf3XcmL;SSL Mode=VerifyFull;Channel Binding=Require"
+    "PostgreSQL": "REPLACE_WITH_ENVIRONMENT_VARIABLE"
   },
   "Groq": {
-    "ModelName": "llama-3.3-70b-versatile"
-  }
+    "ApiKey": "REPLACE_WITH_ENVIRONMENT_VARIABLE",
+    "ModelName": "llama-3.3-70b-versatile",
+    "BaseUrl": "https://api.groq.com/openai/v1/chat/completions",
+    "TimeoutSeconds": 120,
+    "MaxRetries": 3,
+    "CacheDurationMinutes": 60
+  },
+  "AllowedOrigins": [
+    "http://localhost:4200",
+    "https://yourdomain.com"
+  ]
 }
