Add pagination to feedback retrieval and enhance validation in controllers
- Implemented GetPagedFeedbacksAsync method in IFeedbackService and FeedbackService for paginated feedback retrieval.
- Updated FeedbackController to support pagination in GetAllFeedbacks endpoint and added validation error handling.
- Modified ChatController and SportRecommendationController routes to include versioning.
- Enhanced UserProfile model with MaxLength attributes for various properties.
- Updated appsettings files to remove sensitive information and added structure for Groq API configuration.

--- a/tibg-sport-backend/appsettings.Development.json
+++ b/tibg-sport-backend/appsettings.Development.json
@@ -5,10 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": "Host=ep-calm-thunder-a9eblyxg-pooler.gwc.azure.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_b7dUSBf3XcmL;SSL Mode=VerifyFull;Channel Binding=Require"
+    "PostgreSQL": ""
   },
   "Groq": {
-    "ModelName": "llama-3.3-70b-versatile"
+    "ApiKey": "",
+    "ModelName": "llama-3.3-70b-versatile",
+    "BaseUrl": "https://api.groq.com/openai/v1/chat/completions",
+    "TimeoutSeconds": 120,
+    "MaxRetries": 3,
+    "CacheDurationMinutes": 60
   }
 }
