--- a/tibg-sport-backend/appsettings.json
+++ b/tibg-sport-backend/appsettings.json
@@ -7,18 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": "REPLACE_WITH_ENVIRONMENT_VARIABLE"
+    "PostgreSQL": ""
   },
   "Groq": {
-    "ApiKey": "REPLACE_WITH_ENVIRONMENT_VARIABLE",
+    "ApiKey": "",
     "ModelName": "llama-3.3-70b-versatile",
     "BaseUrl": "https://api.groq.com/openai/v1/chat/completions",
     "TimeoutSeconds": 120,
     "MaxRetries": 3,
     "CacheDurationMinutes": 60
-  },
-  "AllowedOrigins": [
-    "http://localhost:4200",
-    "https://yourdomain.com"
-  ]
+  }
 }
