--- a/tibg-sport-backend/appsettings.Production.json
+++ b/tibg-sport-backend/appsettings.Production.json
@@ -5,7 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgreSQL": ""
+  },
   "Groq": {
-    "ModelName": "llama-3.3-70b-versatile"
+    "ApiKey": "",
+    "ModelName": "llama-3.3-70b-versatile",
+    "BaseUrl": "https://api.groq.com/openai/v1/chat/completions",
+    "TimeoutSeconds": 120,
+    "MaxRetries": 3,
+    "CacheDurationMinutes": 60
   }
 }
