feat(auth): Implement user authentication with JWT support
- Added IAuthService and IJwtService interfaces for authentication and token management.
- Created AuthService and JwtService for handling user registration, login, and JWT token generation/validation.
- Introduced RegisterRequest and LoginRequest models for user input validation.
- Developed AuthResponse model to encapsulate authentication results.
- Implemented AuthController with endpoints for user registration, login, and fetching user details by ID or email.
- Updated UserProfile to include new fields and validation attributes.
- Enhanced GroqAiService and GroqChatService to accommodate new user profile structure.
- Added JWT configuration in appsettings and integrated authentication middleware in Program.cs.
- Updated project dependencies to include necessary JWT libraries.

--- a/tibg-sport-backend/appsettings.Development.json
+++ b/tibg-sport-backend/appsettings.Development.json
@@ -16,5 +16,11 @@
     "TimeoutSeconds": 120,
     "MaxRetries": 3,
     "CacheDurationMinutes": 60
+  },
+  "JwtSettings": {
+    "SecretKey": "",
+    "Issuer": "FytAI",
+    "Audience": "FytAI-Users",
+    "ExpirationHours": "24"
   }
 }
