--- a/tibg-sport-backend/appsettings.json
+++ b/tibg-sport-backend/appsettings.json
@@ -16,5 +16,11 @@
     "TimeoutSeconds": 120,
     "MaxRetries": 3,
     "CacheDurationMinutes": 60
+  },
+  "JwtSettings": {
+    "SecretKey": "",
+    "Issuer": "FytAI",
+    "Audience": "FytAI-Users",
+    "ExpirationHours": "24"
   }
 }
