--- a/tibg-sport-backend/appsettings.Production.json
+++ b/tibg-sport-backend/appsettings.Production.json
@@ -9,18 +9,37 @@
   "ConnectionStrings": {
     "PostgreSQL": ""
   },
+  "CorsSettings": {
+    "AllowedOrigins": [
+      "http://localhost:4200",
+      "https://tibg-sport-frontend-iy9w.onrender.com"
+    ]
+  },
   "Groq": {
     "ApiKey": "",
     "ModelName": "llama-3.3-70b-versatile",
     "BaseUrl": "https://api.groq.com/openai/v1/chat/completions",
     "TimeoutSeconds": 120,
     "MaxRetries": 3,
-    "CacheDurationMinutes": 60
+    "CacheDurationMinutes": 60,
+    "CacheSizeLimitMB": 100
   },
   "JwtSettings": {
     "SecretKey": "",
     "Issuer": "FytAI",
     "Audience": "FytAI-Users",
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7,
     "ExpirationHours": "24"
+  },
+  "RateLimiting": {
+    "Global": {
+      "PermitLimit": 10,
+      "WindowMinutes": 1
+    },
+    "Auth": {
+      "PermitLimit": 5,
+      "WindowMinutes": 5
+    }
   }
 }
