feat(database): Implement initial database schema with Ingredients, Recipes, and Users tables
refactor(AlternativesService): Enhance error handling for ingredient retrieval and logging

fix(AuthService): Improve login attempt logging and password verification process

chore(appsettings): Update PostgreSQL connection string and increase rate limits for API

refactor(AlternativesController): Improve error responses and logging for alternative suggestions

--- a/tibg-sport-backend/appsettings.Development.json
+++ b/tibg-sport-backend/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": ""
+    "PostgreSQL": "Host=ep-silent-morning-ag563rki-pooler.c-2.eu-central-1.aws.neon.tech;Database=carbonfootprint;Username=neondb_owner;Password=npg_A4lCeXMrU1ZL;SSL Mode=VerifyFull;Channel Binding=Require;"
   },
   "CorsSettings": {
     "AllowedOrigins": [
@@ -34,11 +34,11 @@
   },
   "RateLimiting": {
     "Global": {
-      "PermitLimit": 10,
+      "PermitLimit": 100,
       "WindowMinutes": 1
     },
     "Auth": {
-      "PermitLimit": 5,
+      "PermitLimit": 20,
       "WindowMinutes": 5
     }
   }
