fix: Update PostgreSQL connection string in appsettings.json and improve caching options in AlternativesService

--- a/tibg-sport-backend/appsettings.json
+++ b/tibg-sport-backend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": ""
+    "PostgreSQL": "Host=ep-silent-morning-ag563rki-pooler.c-2.eu-central-1.aws.neon.tech;Database=carbonfootprint;Username=neondb_owner;Password=npg_A4lCeXMrU1ZL;SSL Mode=VerifyFull"
   },
   "CorsSettings": {
     "AllowedOrigins": [
